# quant-project

./: .gitignore  AGENTS.md  README.md  binance_trader.py  main.ipynb  pyproject.toml
src/backtester/: crypto_broker_env.py
src/binance/: binance_trader.py
src/models/: Chain_RandomForestClassifier_quantiles.py
src/models/RF_meta_probabilities/: RF_Meta_Probabilities.py
src/models/RL/: __init__.py  env.py  model_params.json  rl.py  train.py  utils.py
src/processes/: Permutations.py  Processes_101.py
src/visualization/: multioutput_multiclass.py
tests/: conftest.py
tests/RL/: conftest.py  test_env_core.py  test_env_render.py  test_tensorboard_server.py  test_train.py  test_utils.py
tests/data/: sample_ohlcv.csv
tests/integration/: test_env_walk_through.py
tests/smoke/: test_imports.py
tests/unit/backtester/: test_crypto_broker_env.py
tests/unit/binance/: conftest.py  test_binance_account_misc.py  test_binance_marketdata.py  test_binance_orders.py
tests/unit/processes/: test_permutations.py  test_processes_101.py
tests/unit/visualization/: test_multioutput_multiclass.py
