[project]
name = "quant-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "binance-connector>=3.11.0",
    "datetime>=5.5",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.1",
    "logging>=0.4.9.6",
    "pandas-ta>=0.3.14b0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "seaborn>=0.13.2",
    "ta-lib",
    "typing>=3.10.0.0",
    "hvplot>=0.11.2",
    "holoviews>=1.20.0",
    "xgboost-cpu>=2.1.3",
    "backtesting>=0.3.3",
    "scikit-learn>=1.6.0",
]

[tool.uv.sources]
ta-lib = { path = "TA_Lib-0.4.28-cp312-cp312-win_amd64.whl" }
